--- a/curiosidades.css
+++ b/curiosidades.css
@@ -19,8 +19,7 @@
 .conteudo {
     position: relative;
     height: 200px;
-    
-    border: 3px solid #73AD21;
+    padding-top: 10%;
 }
 
 body {
@@ -30,4 +29,8 @@ body {
     background-color: #484866;
     text-align: center;
     color: #FFFF;
+}
+.conteudo span {
+    display: block;
+    padding-top: 2%;
 }
